(minor) wording: "Group per title" instead of "one title per line" (history)

--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -70,7 +70,7 @@ div
               i.glyphicon.glyphicon-th-list
 
           input(type="checkbox", ng-click="filter_unique()", ng-model="show_unique")
-        span {% trans "One title per line" %}
+        span {% trans "Group per title" %}
 
 
     .row.ng-cloak
