--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -89,7 +89,7 @@ div(ng-cloak, ng-controller="collectionController")
           ng-options="elt.fields.name for elt in shelfs")
 
  .row
-   .col-md-4
+   .col-md-7(style="margin-top: 7px; margin-bottom: 7px")
      input.btn.btn-primary(value="{% trans 'Search' %}", ng-click="validate()", type="submit")
 
      .btn-group
@@ -111,7 +111,7 @@ div(ng-cloak, ng-controller="collectionController")
       button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers" %}')
         i.glyphicon.glyphicon-th-list
 
-   .col-md-3 {% trans "Number of titles" %}: {{'stats.nb_titles.value'|ng}}
+      span(style="margin-top: 18px; margin-left: 7px") {% trans "Number of titles" %}: {{'stats.nb_titles.value'|ng}}
 
 
  table.row-border.hover(ng-show="cards.length != 0", datatable="ng")
