(minor) UI: add doc buttons, fix CSS gaps

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -96,7 +96,7 @@ div(ng-cloak, ng-controller="basketsController")
        button.btn.btn-default(ng-click="start_tour()")
            i.glyphicon.glyphicon-info-sign
 
-       a(href="http://abelujo.cc/docs/lists/", target="_blank"): button.btn.btn-default(title='{% trans "Read the documentation" %}')
+       a.btn.btn-default(href="http://abelujo.cc/docs/lists/", target="_blank", title='{% trans "Read the documentation" %}')
          i.glyphicon.glyphicon-question-sign
 
    .col-md-2
