--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -55,36 +55,39 @@ div(ng-cloak, ng-controller="basketsController")
    .col-md-6
 
     .btn-group
-     button#actions.btn.btn-info.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
-       span.caret
+      .dropdown
 
-     ul.dropdown-menu
-       li
-         a(href="#", title='', ng-click="open_new_basket('sm')") {% trans "Create a list" %} 
-           i.glyphicon.glyphicon-plus
+         button#actions.btn.btn-info.dropdown-toggle(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false") {% trans "Action" %}
+           span.caret
 
-       li.divider(role="separator")
+         ul.dropdown-menu
+           li
+             a(href="#", title='', ng-click="open_new_basket('sm')") {% trans "Create a list" %} 
+               i.glyphicon.glyphicon-plus
 
-       li: a(href="#", ng-click="command()", title='{% trans "Mark all the cards to command" %}') {% trans "Command…" %}
-       li: a(href="#", ng-click="receive_command()", title='{% trans "Receive a command and check you received all the books" %}') {% trans "Receive a command" %}…
-       li: a(href="#", ng-click="open_to_deposit('md')", title='{% trans "You can transform this list of books to a deposit. You will be asked the supplier and the discount." %}') {% trans "Transform as deposit" %}…
-       li.divider(role="separator")
-       li: a(href="#", ng-click="delete_basket()", title='{% trans "Delete this list. This can not be undone" %}') {% trans "Delete this list" %}
+           li.divider(role="separator")
 
-    .btn-group
-     button.btn.btn-success.dropdown-toggle(data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
-       span.caret
+           li: a(href="#", ng-click="command()", title='{% trans "Mark all the cards to command" %}') {% trans "Command…" %}
+           li: a(href="#", ng-click="receive_command()", title='{% trans "Receive a command and check you received all the books" %}') {% trans "Receive a command" %}…
+           li: a(href="#", ng-click="open_to_deposit('md')", title='{% trans "You can transform this list of books to a deposit. You will be asked the supplier and the discount." %}') {% trans "Transform as deposit" %}…
+           li.divider(role="separator")
+           li: a(href="#", ng-click="delete_basket()", title='{% trans "Delete this list. This can not be undone" %}') {% trans "Delete this list" %}
 
-     ul.dropdown-menu
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=txt&report=listing") txt
+    .btn-group.dro
+      .dropdown
+       button.btn.btn-success.dropdown-toggle(data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
+         span.caret
 
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=csv&report=listing") {% trans "List" %} - csv
+       ul.dropdown-menu
+         li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=txt&report=listing") txt
 
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=csv&report=simplelisting") {% trans "isbn and quantity (Dilicom)" %} - csv
+         li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=csv&report=listing") {% trans "List" %} - csv
 
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=true") {% trans "List, with barcodes" %} - pdf
+         li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=csv&report=simplelisting") {% trans "isbn and quantity (Dilicom)" %} - csv
 
-       li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=false&covers=true") {% trans "List, with covers" %} - pdf
+         li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=true") {% trans "List, with barcodes" %} - pdf
+
+         li: a(href="/baskets/{{ 'cur_basket.id' | ng}}/export?format=pdf&report=listing&barcodes=false&covers=true") {% trans "List, with covers" %} - pdf
 
     .btn-group
        button.btn.btn-default(ng-click="toggle_images()", title='{% trans "Hide and show covers (d)" %}')
