--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -130,8 +130,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
                 ng-show="show_images") {{ 'card.availability' | ng }}
 
               div(ng-show="show_images")
-                 a(ng-show='language == "fr" '
-                  target="_blank"
+                 a(target="_blank"
                   href="https://framabee.org/?q=site:lmda.net {{'card.authors[0]'|ng}} {{ 'card.title' | ng }}") lmda.net
 
         td
