save and serve covers images on disk.
fixes #16 - Save covers to the DB

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -50,7 +50,7 @@
     .col-lg-4
 
       .row(style="margin-left: 1px;")
-        img.img-responsive(src="{{ object.img }}")
+        img.img-responsive(src="{{ object.cover }}")
 
       .row(style="margin-left: 1px;")
 
