--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -102,7 +102,7 @@ div
              td {{ 'sell.price_sold' | ng }} €
              td
                .row
-                 img.myImg.col-md-3(ng-show="show_details", src="{{ 'sell.card.img' | ng }}")
+                 img.myImg.col-md-3(ng-show="show_details", src="{{ 'sell.card.cover' | ng }}")
                  a.col-md-9(href="{{ 'sell.card.get_absolute_url' | ng }}") {{ 'sell.card.title' | ng }}
 
              td
