--- a/templates/base.jade
+++ b/templates/base.jade
@@ -29,6 +29,7 @@ html(ng-app="abelujo")
     link(rel='stylesheet', type='text/css', href='{% static "css/hotkeys.min.css" %}')
     link(href='{% static "css/bootstrap-tour.min.css', rel='stylesheet')
 
+    script(src="{% static 'app.js' %}")
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
@@ -130,3 +131,7 @@ html(ng-app="abelujo")
             .col-md-12
                 {% block content %}
                 {% endblock content %}
+
+  // brunch: load our Vue app.
+  script
+      | require("static/vue/main")
