--- a/templates/pdftemplates/pdf-barcode.jade
+++ b/templates/pdftemplates/pdf-barcode.jade
@@ -31,7 +31,7 @@ head
   body
 
     h2#header_content(style="{text-align: center;}")  {{ list_name }}, {{ date }}
-    div#footer_content(style="{text-align: center;}") {% trans "page" %} <pdf:pagenumber> / <pdf:pagecount> 
+    //- div#footer_content(style="{text-align: center;}") {% trans "page" %} <pdf:pagenumber> / <pdf:pagecount> 
 
     table
       thead
